--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="./reset.css" media="screen">
+  <link rel="stylesheet" href="./assets/reset.css" media="screen">
 </head>
 <body>
-  <script src="assets/main.js"></script>
+  <script src="./assets/main.js"></script>
 </body>
 </html>
